Remove PyCall + CodecZstd dict tree branch citation + gitignore for all dotfiles

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,146 +1,153 @@
 @article{li2014big,
-    publisher = {Elsevier},
-    title = {Big biological data: challenges and opportunities},
-    number = {5},
-    author = {Li, Yixue and Chen, Luonan},
-    pages = {187},
+    volume = {12},
     year = {2014},
     journal = {Genomics, proteomics \& bioinformatics},
-    volume = {12},
+    pages = {187},
+    publisher = {Elsevier},
+    title = {Big biological data: challenges and opportunities},
+    author = {Li, Yixue and Chen, Luonan},
+    number = {5},
 }
 
 @article{d2018high,
-    title = {The high-throughput analyses era: are we ready for the data struggle?},
-    publisher = {MDPI},
-    year = {2018},
-    number = {1},
     journal = {High-throughput},
-    volume = {7},
-    author = {D’Argenio, Valeria},
+    publisher = {MDPI},
+    number = {1},
     pages = {8},
+    volume = {7},
+    year = {2018},
+    author = {D’Argenio, Valeria},
+    title = {The high-throughput analyses era: are we ready for the data struggle?},
 }
 
 @article{Julia-2017,
-    title = {Julia: A fresh approach to numerical computing},
     journal = {SIAM {R}eview},
-    doi = {10.1137/141000671},
-    year = {2017},
-    publisher = {SIAM},
-    url = {https://epubs.siam.org/doi/10.1137/141000671},
-    volume = {59},
-    number = {1},
-    pages = {65--98},
     author = {Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+    doi = {10.1137/141000671},
+    pages = {65--98},
+    volume = {59},
+    year = {2017},
+    number = {1},
+    url = {https://epubs.siam.org/doi/10.1137/141000671},
+    title = {Julia: A fresh approach to numerical computing},
+    publisher = {SIAM},
 }
 
 @misc{sandoval,
     title = {Citations – apps for Gnome},
+    url = {https://apps.gnome.org/app/org.gnome.World.Citations/},
     journal = {– Apps for GNOME},
     publisher = {GNOME Circle},
     author = {Sandoval, Maximiliano},
-    url = {https://apps.gnome.org/app/org.gnome.World.Citations/},
 }
 
 @software{Allaire_Quarto_2022,
-    doi = {10.5281/zenodo.5960048},
-    author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
-    year = {2022},
-    title = {{Quarto}},
-    version = {0.3},
     month = {1},
     url = {https://github.com/quarto-dev/quarto-cli},
+    author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
+    doi = {10.5281/zenodo.5960048},
+    version = {0.3},
+    year = {2022},
+    title = {{Quarto}},
 }
 
 @misc{maio,
     journal = {GitHub},
     author = {Di Maio , Luca},
-    title = {Distrobox},
     url = {https://github.com/89luca89/distrobox},
+    title = {Distrobox},
 }
 
 @article{sais2022intelligent,
-    pages = {746--751},
-    year = {2022},
     journal = {Procedia Computer Science},
+    pages = {746--751},
     volume = {201},
+    year = {2022},
     title = {Intelligent Approaches to Optimizing Big Data Storage and Management: REHDFS system and DNA Storage},
     author = {Sais, Manar and Rafalia, Najat and Abouchabaka, Jaafar},
     publisher = {Elsevier},
 }
 
 @article{jayasankar2021survey,
-    publisher = {Elsevier},
-    volume = {33},
-    number = {2},
-    year = {2021},
     pages = {119--140},
-    author = {Jayasankar, Uthayakumar and Thirumal, Vengattaraman and Ponnurangam, Dhavachelvan},
+    volume = {33},
     title = {A survey on data compression techniques: From the perspective of data quality, coding schemes, data type and applications},
+    publisher = {Elsevier},
     journal = {Journal of King Saud University-Computer and Information Sciences},
+    author = {Jayasankar, Uthayakumar and Thirumal, Vengattaraman and Ponnurangam, Dhavachelvan},
+    year = {2021},
+    number = {2},
 }
 
 @article{grumbach1994new,
-    title = {A new challenge for compression algorithms: genetic sequences},
+    year = {1994},
     publisher = {Elsevier},
-    number = {6},
+    title = {A new challenge for compression algorithms: genetic sequences},
     journal = {Information processing \& management},
+    number = {6},
     author = {Grumbach, St{\'e}phane and Tahi, Fariza},
     volume = {30},
-    year = {1994},
     pages = {875--886},
 }
 
 @article{mills2014common,
-    pages = {A--1B},
-    volume = {45},
-    number = {1},
-    year = {2014},
-    author = {Mills, Lauren},
-    publisher = {Wiley Online Library},
     title = {Common file formats},
+    pages = {A--1B},
+    publisher = {Wiley Online Library},
+    year = {2014},
+    volume = {45},
     journal = {Current protocols in bioinformatics},
+    number = {1},
+    author = {Mills, Lauren},
 }
 
 @article{lipman1985rapid,
     year = {1985},
+    title = {Rapid and sensitive protein similarity searches},
     publisher = {American Association for the Advancement of Science},
-    journal = {Science},
     volume = {227},
     author = {Lipman, David J and Pearson, William R},
+    journal = {Science},
     number = {4693},
     pages = {1435--1441},
-    title = {Rapid and sensitive protein similarity searches},
 }
 
 @article{mohammed2012deliminate,
     number = {19},
-    pages = {2527--2529},
     publisher = {Oxford University Press},
     year = {2012},
+    pages = {2527--2529},
     volume = {28},
     title = {DELIMINATE—a fast and efficient method for loss-less compression of genomic sequences: Sequence analysis},
-    author = {Mohammed, Monzoorul Haque and Dutta, Anirban and Bose, Tungadri and Chadaram, Sudha and Mande, Sharmila S},
     journal = {Bioinformatics},
+    author = {Mohammed, Monzoorul Haque and Dutta, Anirban and Bose, Tungadri and Chadaram, Sudha and Mande, Sharmila S},
 }
 
 @article{pinho2014mfcompress,
     author = {Pinho, Armando J and Pratas, Diogo},
-    title = {MFCompress: a compression tool for FASTA and multi-FASTA data},
+    pages = {117--118},
     number = {1},
-    year = {2014},
     publisher = {Oxford University Press},
+    title = {MFCompress: a compression tool for FASTA and multi-FASTA data},
     volume = {30},
     journal = {Bioinformatics},
-    pages = {117--118},
+    year = {2014},
 }
 
 @article{kryukov2019nucleotide,
-    pages = {3826--3828},
-    title = {Nucleotide Archival Format (NAF) enables efficient lossless reference-free compression of DNA sequences},
     author = {Kryukov, Kirill and Ueda, Mahoko Takahashi and Nakagawa, So and Imanishi, Tadashi},
-    journal = {Bioinformatics},
-    volume = {35},
-    number = {19},
     publisher = {Oxford University Press},
     year = {2019},
+    volume = {35},
+    title = {Nucleotide Archival Format (NAF) enables efficient lossless reference-free compression of DNA sequences},
+    pages = {3826--3828},
+    journal = {Bioinformatics},
+    number = {19},
+}
+
+@misc{kittisopikul,
+    journal = {GitHub},
+    title = {CodecZstd.jl dictionary_and_parameters tree},
+    url = {https://github.com/mkitti/CodecZstd.jl/tree/dictionary_and_parameters},
+    author = {Kittisopikul, Mark},
 }
