--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -191,7 +191,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Proof of concept Zstandard user-provided dictionary compression for FASTA files},
+  pdftitle={Exploring Zstandard user-provided dictionary compression for FASTA files},
   pdfauthor={Michael Persico},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
@@ -204,8 +204,8 @@
 % Title must be 250 characters or less.
 \begin{flushleft}
 {\Large
-\textbf\newline{Proof of concept Zstandard user-provided dictionary
-compression for FASTA
+\textbf\newline{Exploring Zstandard user-provided dictionary compression
+for FASTA
 files} % Please use "sentence case" for title and headings (capitalize only the first word in a title (or heading), the first word in a subtitle (or subheading), and any proper nouns).
 }
 \newline
@@ -250,15 +250,15 @@ sections
 \subsection{Background}\label{background}}
 
 Zstandard (Zstd) represents a universal, lossless data compression
-mechanism that is highly configurable and is aimed at coupling high
-compression ratios with fast compression/decompression performance.
-Previous studies have paired specific Zstd configurations with various
-file formats in bioinformatics to reduce total data volume. This paper
-presents a ``training mode'' pipeline, written in the Julia programming
-language, wherein a custom compression dictionary is generated from a
-sample FASTA set in order to explore further compression improvements
-and compare them to the compression performance of Xz, Zlib, Bzip2, and
-Lz4 universal compressors.
+standard and implementation that is highly configurable and is aimed at
+coupling high compression ratios with fast compression/decompression
+performance. Previous studies have paired specific Zstd configurations
+with various file formats in bioinformatics to reduce total data volume.
+This paper presents a ``training mode'' pipeline, written in the Julia
+programming language, wherein a custom compression dictionary is
+generated from a sample FASTA set in order to explore further
+compression improvements and compare them to the compression performance
+of Xz, Zlib, Bzip2, and Lz4 universal compressors.
 
 \hypertarget{results}{%
 \subsection{Results}\label{results}}
@@ -286,32 +286,61 @@ compression in the context of biological data began to pick up near the
 turn of the 21st century as universal compression algorithms at the time
 were not considered ideal for compressing DNA or RNA sequence data well,
 which led to the introduction of purpose-built algorithms that addressed
-the unique attributes of genomics data\citep{grumbach1994new}. At the
+the unique peculiarities of genomic data\citep{grumbach1994new}. At the
 same time, new file formats were introduced, either text-based or
 binary-based, for more accurate structuring and representation of
 biological data, complementing new software
 tools\citep{lipman1985rapid, mills2014common}.
 
-The FASTA file format is a legacy of the original FASTA program from
-1985 for finding sequence similarities with a query
+The FASTA file format is a legacy of the original FASTA program for
+finding sequence similarities with a query
 sequence\citep{lipman1985rapid}. Each file can possess multiple
-sequences, each paired with a description line distinguished with a
-``\textgreater{}'' symbol followed by arbitary text, usually a name and
-summary description, on the same line. It is a commonly supported file
-format in bioinformatics and has been the target for optimized data
-compressors in competition with one another. The DELIMINATE lossless
-algorithm was first proposed in 2012, wherein header and sequence data
-are separated into DELIM-1 and DELIM-2 variants and a two-phase process
-is pursued involving delta encoding, progressive elimination of
-nucleotide characters, and 7-Zip
+sequences, each paired with a description line distinguished by a
+``\textgreater{}'' symbol followed by arbitrary text, usually a name
+and/or summary description, on the same line. It is a commonly supported
+file format in bioinformatics and has been the target for optimized data
+compressors with competing claims for performance. The DELIMINATE
+lossless algorithm was first proposed in 2012, wherein header and
+sequence data are separated into DELIM-1 and DELIM-2 variants and a
+two-phase process is pursued involving delta encoding, progressive
+elimination of nucleotide characters, and 7-Zip
 archiving\citep{mohammed2012deliminate}. The claims of better
 compression/decompression performance of FASTA files were soon rivaled
 by the introduction of the MFCompress tool, again separating headers and
 sequence data but instead relying on probabilistic models to encode the
-data\citep{pinho2014mfcompress}, which was countered by the Nucleotide
-Archival Format, a novel file format which is noteworthy in this context
-for the inclusion a Zstandard compression
+data\citep{pinho2014mfcompress}, which was then countered by the
+Nucleotide Archival Format, a novel file format noteworthy in this
+context for the inclusion of a Zstandard compression
 step\citep{kryukov2019nucleotide}.
+
+IETF RFC 8878, introduced by engineers at Facebook, defines Zstandard as
+a lossless data compression/decompression
+format\citep{collet2021rfc8478}. It is often abbreviated as ``Zstd'',
+though such can also refer to Facebook's own implementation of the
+algorithm written mostly in C\citep{facebook}. Content is sliced and
+packaged into ``frames'' that are independent of one another defined as
+either compressed data Zstandard frames or Skippable frames containing
+custom user metadata\citep{collet2021rfc8478}. Zstd's backbone is the
+use of Finite State Entropy and Huffman entropy encoding schemes that
+replace data with coded forms independently of the
+medium\citep{ezhilarasan_thambidurai_praveena_srinivasan_sumathi_2007, LU20171},
+with the former compressing all symbols, though header information is
+first encoded by the latter\citep{collet2021rfc8478}. Zstd, for small
+data compression improvements, also functions as a dictionary coder,
+meaning that although the algorithm is universal in the sense of being
+applicable to a number of both text-based and binary-based data files,
+it can be optimized for compacting characteristic data by ``training''
+Zstd with a collection of sample files to build a set of common patterns
+that allow for substitutions when compressing/decompressing, allowing
+for further gains for similar data\citep{8316293}.
+
+Common bioinformatics file formats often include a set structure with
+the express purpose of representing specific kinds of biological data
+composed of repeating elements, as is the case with FASTA files with
+either nucleotide or amino acid sequences. In this work is described a
+pipeline for building Zstd dictionaries via FASTA datasets along with a
+comparison of Zstd compression/decompression performance with that of
+several alternative lossless compressors for select datasets.
 
 \hypertarget{materials-and-methods}{%
 \section{Materials and methods}\label{materials-and-methods}}
