--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,200 +1,215 @@
 @article{li2014big,
-    journal = {Genomics, proteomics \& bioinformatics},
+    title = {Big biological data: challenges and opportunities},
     author = {Li, Yixue and Chen, Luonan},
     year = {2014},
-    publisher = {Elsevier},
     volume = {12},
-    pages = {187},
     number = {5},
-    title = {Big biological data: challenges and opportunities},
+    publisher = {Elsevier},
+    pages = {187},
+    journal = {Genomics, proteomics \& bioinformatics},
 }
 
 @article{d2018high,
     year = {2018},
+    publisher = {MDPI},
     pages = {8},
     author = {D’Argenio, Valeria},
-    volume = {7},
-    title = {The high-throughput analyses era: are we ready for the data struggle?},
-    journal = {High-throughput},
-    publisher = {MDPI},
     number = {1},
+    journal = {High-throughput},
+    title = {The high-throughput analyses era: are we ready for the data struggle?},
+    volume = {7},
 }
 
 @article{Julia-2017,
-    pages = {65--98},
-    volume = {59},
     author = {Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+    pages = {65--98},
     year = {2017},
-    url = {https://epubs.siam.org/doi/10.1137/141000671},
     publisher = {SIAM},
-    doi = {10.1137/141000671},
+    volume = {59},
     journal = {SIAM {R}eview},
-    title = {Julia: A fresh approach to numerical computing},
+    url = {https://epubs.siam.org/doi/10.1137/141000671},
+    doi = {10.1137/141000671},
     number = {1},
+    title = {Julia: A fresh approach to numerical computing},
 }
 
 @misc{sandoval,
-    author = {Sandoval, Maximiliano},
-    journal = {– Apps for GNOME},
     title = {Citations – apps for Gnome},
     publisher = {GNOME Circle},
     url = {https://apps.gnome.org/app/org.gnome.World.Citations/},
+    journal = {– Apps for GNOME},
+    author = {Sandoval, Maximiliano},
 }
 
 @software{Allaire_Quarto_2022,
-    url = {https://github.com/quarto-dev/quarto-cli},
     title = {{Quarto}},
-    doi = {10.5281/zenodo.5960048},
+    url = {https://github.com/quarto-dev/quarto-cli},
     author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
+    doi = {10.5281/zenodo.5960048},
     month = {1},
     year = {2022},
     version = {0.3},
 }
 
 @misc{maio,
-    journal = {GitHub},
-    title = {Distrobox},
-    url = {https://github.com/89luca89/distrobox},
     author = {Di Maio , Luca},
+    journal = {GitHub},
+    url = {https://github.com/89luca89/distrobox},
+    title = {Distrobox},
 }
 
 @article{sais2022intelligent,
-    title = {Intelligent Approaches to Optimizing Big Data Storage and Management: REHDFS system and DNA Storage},
     volume = {201},
-    pages = {746--751},
-    year = {2022},
     author = {Sais, Manar and Rafalia, Najat and Abouchabaka, Jaafar},
+    title = {Intelligent Approaches to Optimizing Big Data Storage and Management: REHDFS system and DNA Storage},
     publisher = {Elsevier},
     journal = {Procedia Computer Science},
+    pages = {746--751},
+    year = {2022},
 }
 
 @article{jayasankar2021survey,
-    journal = {Journal of King Saud University-Computer and Information Sciences},
-    year = {2021},
     title = {A survey on data compression techniques: From the perspective of data quality, coding schemes, data type and applications},
+    publisher = {Elsevier},
+    year = {2021},
+    journal = {Journal of King Saud University-Computer and Information Sciences},
+    author = {Jayasankar, Uthayakumar and Thirumal, Vengattaraman and Ponnurangam, Dhavachelvan},
     volume = {33},
     number = {2},
     pages = {119--140},
-    author = {Jayasankar, Uthayakumar and Thirumal, Vengattaraman and Ponnurangam, Dhavachelvan},
-    publisher = {Elsevier},
 }
 
 @article{grumbach1994new,
-    title = {A new challenge for compression algorithms: genetic sequences},
-    year = {1994},
-    author = {Grumbach, St{\'e}phane and Tahi, Fariza},
-    pages = {875--886},
     volume = {30},
-    journal = {Information processing \& management},
+    author = {Grumbach, St{\'e}phane and Tahi, Fariza},
+    title = {A new challenge for compression algorithms: genetic sequences},
+    pages = {875--886},
     number = {6},
+    year = {1994},
     publisher = {Elsevier},
+    journal = {Information processing \& management},
 }
 
 @article{mills2014common,
-    publisher = {Wiley Online Library},
-    volume = {45},
-    author = {Mills, Lauren},
-    title = {Common file formats},
     journal = {Current protocols in bioinformatics},
     year = {2014},
     number = {1},
+    title = {Common file formats},
+    author = {Mills, Lauren},
     pages = {A--1B},
+    publisher = {Wiley Online Library},
+    volume = {45},
 }
 
 @article{lipman1985rapid,
-    year = {1985},
-    volume = {227},
-    publisher = {American Association for the Advancement of Science},
-    author = {Lipman, David J and Pearson, William R},
-    journal = {Science},
-    title = {Rapid and sensitive protein similarity searches},
     number = {4693},
+    year = {1985},
+    title = {Rapid and sensitive protein similarity searches},
     pages = {1435--1441},
+    author = {Lipman, David J and Pearson, William R},
+    publisher = {American Association for the Advancement of Science},
+    journal = {Science},
+    volume = {227},
 }
 
 @article{mohammed2012deliminate,
-    title = {DELIMINATE—a fast and efficient method for loss-less compression of genomic sequences: Sequence analysis},
+    pages = {2527--2529},
     volume = {28},
+    journal = {Bioinformatics},
     number = {19},
     author = {Mohammed, Monzoorul Haque and Dutta, Anirban and Bose, Tungadri and Chadaram, Sudha and Mande, Sharmila S},
     publisher = {Oxford University Press},
-    journal = {Bioinformatics},
     year = {2012},
-    pages = {2527--2529},
+    title = {DELIMINATE—a fast and efficient method for loss-less compression of genomic sequences: Sequence analysis},
 }
 
 @article{pinho2014mfcompress,
+    title = {MFCompress: a compression tool for FASTA and multi-FASTA data},
+    journal = {Bioinformatics},
     author = {Pinho, Armando J and Pratas, Diogo},
     pages = {117--118},
-    journal = {Bioinformatics},
-    year = {2014},
     volume = {30},
+    year = {2014},
     number = {1},
-    title = {MFCompress: a compression tool for FASTA and multi-FASTA data},
     publisher = {Oxford University Press},
 }
 
 @article{kryukov2019nucleotide,
-    pages = {3826--3828},
-    number = {19},
+    title = {Nucleotide Archival Format (NAF) enables efficient lossless reference-free compression of DNA sequences},
     volume = {35},
     year = {2019},
-    author = {Kryukov, Kirill and Ueda, Mahoko Takahashi and Nakagawa, So and Imanishi, Tadashi},
     journal = {Bioinformatics},
+    pages = {3826--3828},
+    number = {19},
+    author = {Kryukov, Kirill and Ueda, Mahoko Takahashi and Nakagawa, So and Imanishi, Tadashi},
     publisher = {Oxford University Press},
-    title = {Nucleotide Archival Format (NAF) enables efficient lossless reference-free compression of DNA sequences},
 }
 
 @misc{kittisopikul,
-    title = {CodecZstd.jl dictionary_and_parameters tree},
-    journal = {GitHub},
     author = {Kittisopikul, Mark},
+    journal = {GitHub},
     url = {https://github.com/mkitti/CodecZstd.jl/tree/dictionary_and_parameters},
+    title = {CodecZstd.jl dictionary_and_parameters tree},
 }
 
 @misc{collet2021rfc8478,
-    year = {2021},
     title = {RFC8478: Zstandard compression and the application/zstd media type},
     author = {Collet, Yann and Kucherawy, M},
+    year = {2021},
 }
 
 @misc{facebook,
-    author = {Facebook},
     url = {https://github.com/facebook/zstd},
+    author = {Facebook},
     title = {Facebook/ZSTD: Zstandard - fast real-time compression algorithm},
     journal = {GitHub},
 }
 
 @incollection{LU20171,
-    author = {Zhe-Ming Lu and Shi-Ze Guo},
-    doi = {https://doi.org/10.1016/B978-0-12-812006-4.00001-2},
-    booktitle = {Lossless Information Hiding in Images},
-    title = {Chapter 1 - Introduction},
-    pages = {1-68},
-    isbn = {978-0-12-812006-4},
-    editor = {Zhe-Ming Lu and Shi-Ze Guo},
-    publisher = {Syngress},
-    keywords = {Image, Image compression, Image processing, Information hiding, Lossless information hiding},
     abstract = {With the rapid development of digital image processing techniques and the popularization of the Internet, digital images are being used more and more widely in a number of applications from medical imaging and law enforcement to banking and daily consumer use. They are much more convenient in editing, copying, storing, transmitting, and utilizing. However, unfortunately, at the same time, digital images are facing the problems of copyright protection and content authentication. Since the 1990s, the development of information hiding techniques has provided a way to protect digital media. Such techniques embed some secret information like private annotations, business logos, and critical intelligence into cover media in an invisible form so that many applications, like ownership claim of digital contents, copyright protection of media, and covert communication between parties, can be fulfilled. In general, compared with the cover media, the stego media has a small amount of content distortion that is usually imperceptible to human vision. However, such distortion is not preferred in some applications, such as legal documentation, medical imaging, military reconnaissance, and high-precision scientific investigation, because it may lead to risks of incorrect decision making. In view of this, a kind of novel information hiding technique, which is referred to as reversible, invertible, lossless, or distortion-free information hiding, has been developed in recent years. Lossless information hiding techniques can be employed to restore stego images to their pristine states after the hidden data are extracted. In this chapter, we first introduce the background of this book, including the concepts and issues related to images and network information security. Then, we introduce the concepts, models, research branches, and required properties of information hiding; the classification of information hiding algorithms; and the application fields of information hiding techniques. Then, an overview is provided of the coding techniques for image compression, including entropy coding, transform coding, vector quantization, and block truncation coding, together with JPEG and JPEG2000 standards. Next, we provide an overview of the information hiding techniques for images, including the framework, classification, and required properties. Thereafter, we introduce the possible applications of lossless information hiding techniques for images. Finally, we give the outline of this book.},
     year = {2017},
+    title = {Chapter 1 - Introduction},
     url = {https://www.sciencedirect.com/science/article/pii/B9780128120064000012},
+    booktitle = {Lossless Information Hiding in Images},
+    pages = {1-68},
+    publisher = {Syngress},
+    editor = {Zhe-Ming Lu and Shi-Ze Guo},
+    isbn = {978-0-12-812006-4},
+    doi = {https://doi.org/10.1016/B978-0-12-812006-4.00001-2},
+    author = {Zhe-Ming Lu and Shi-Ze Guo},
+    keywords = {Image, Image compression, Image processing, Information hiding, Lossless information hiding},
 }
 
 @article{ezhilarasan_thambidurai_praveena_srinivasan_sumathi_2007,
-    title = {A new entropy encoding technique for multimedia data compression},
+    journal = {International Conference on Computational Intelligence and Multimedia Applications (ICCIMA 2007)},
     doi = {10.1109/iccima.2007.123},
     author = {Ezhilarasan, M. and Thambidurai, P. and Praveena, K. and Srinivasan, Sudha and Sumathi, N.},
-    journal = {International Conference on Computational Intelligence and Multimedia Applications (ICCIMA 2007)},
+    title = {A new entropy encoding technique for multimedia data compression},
     year = {2007},
 }
 
 @inproceedings{8316293,
     title = {Practical String Dictionary Compression Using String Dictionary Encoding},
-    year = {2017},
+    number = {},
     volume = {},
     booktitle = {2017 International Conference on Big Data Innovations and Applications (Innovate-Data)},
-    author = {Kanda, Shunsuke and Morita, Kazuhiro and Fuketa, Masao},
-    number = {},
-    doi = {10.1109/Innovate-Data.2017.9},
+    year = {2017},
     pages = {1-8},
+    doi = {10.1109/Innovate-Data.2017.9},
+    author = {Kanda, Shunsuke and Morita, Kazuhiro and Fuketa, Masao},
+}
+
+@misc{ncbi,
+    title = {Escherichia coli MS 200-1, Whole Genome Shotgun sequencing project - nucleotide - NCBI},
+    url = {https://www.ncbi.nlm.nih.gov/nuccore/NZ_ADUC00000000.1},
+    journal = {National Center for Biotechnology Information},
+    publisher = {U.S. National Library of Medicine},
+}
+
+@misc{sato,
+    publisher = {JuliaIO},
+    author = {Sato, Kenta},
+    title = {JuliaIO/TranscodingStreams.jl: Simple, consistent interfaces for any codec.},
+    journal = {GitHub},
+    url = {https://github.com/JuliaIO/TranscodingStreams.jl},
 }
